[package]
name = "websocket_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.3"
tokio-stream = "0.1.11"
futures = "0.3.25"
log = "0.4.17"
pretty_env_logger = "0.4.0"